# Fuel_flow_rig

./: .gitignore  README.md
boilerplate/: pyproject.toml
config/: io_config.yaml
rig-backend/src/: sm_logic.py
rig-backend/src/rig_backend/: main.py
rig-ui/: pyproject.toml
rig-ui/src/: can_ids.h  can_ids.py  can_messages.md  can_simulator.py  config_loader.py  generate_all.py  main.py
rig-ui/src/config/: io_config.yaml
rig-ui/src/fdm/: fdm.py
rig-ui/src/fsm/: fdm_state_machine.py  fsm.py
rig-ui/src/generate/: c_header.py  markdown.py  python_header.py
rig-ui/src/heartbeat/: send_heartbeat.py
rig-ui/src/pm/: pm.py
rig-ui/src/rig_ui/: main.py
rig-ui/src/rig_ui/ui_widgets/: attempt.py  flow.py  notebook.py  tank_level.py
simulation-folder-hardware/: bringup.py  can_volume_sim.py  events.jsonl  heartbeat.csv  orchestrate_cycle.py
simulation-folder-hardware/pico_sim/: commands.py  faults.py  main.py  proto.py  sim.py  state.py
simulation-folder-hardware/tcd1/: config.py  logger.py  pico_link.py  safety.py
simulation-folder-hardware/tcd1/actions/: data_collect.py  drain_canister.py  drain_sump.py  heartbeat.py
simulation_local/: bringup.py  bringup_log.txt  components.py  controls.py  data_send.py  events.jsonl  heartbeat.csv  log_tsdb.py  orchestrate_cycle.py  orchestrate_cycle1.py  points.jsonl  sensors.csv
simulation_local/code/: pyvenv.cfg
simulation_local/kp_controller_sim/: main.py
simulation_local/tcd1/: config.py  controller_subprocess_link.py  logger.py  safety.py
simulation_local/tcd1/actions/: __init__.py  data_collect.py  (+3 more)
