[project]
name = "rig-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "a_nzilani",email = "a.nzilani@kokonetworks.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygobject (>=3.54.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "rig_ui", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
